fix Align logo in header.

--- a/src/components/atoms/avatar/Avatar.sass
+++ b/src/components/atoms/avatar/Avatar.sass
@@ -1,5 +1,4 @@
 .Avatar
-  border: 4px solid #050508
   border-radius: 50%
   max-width: 300px
   margin: 0 auto
