--- a/src/components/organisms/header/Header.sass
+++ b/src/components/organisms/header/Header.sass
@@ -6,7 +6,7 @@
   border-bottom: 2px $primary solid
   color: inherit
   height: $headerHeight
-  line-height: $headerHeight
+  line-height: 100%
   position: fixed
   top: 0
   width: 100%
@@ -20,7 +20,7 @@
     max-width: 1200px
     margin: 0 auto
     padding: 0 15px
-    line-height: $headerHeight
+    line-height: 100%
     height: inherit
 
     h1
